[gd_scene load_steps=36 format=3 uid="uid://clwcbuyvguupb"]

[ext_resource type="Script" path="res://scripts/noc.gd" id="1_fpl0a"]
[ext_resource type="Texture2D" uid="uid://djxnn16pl3t6o" path="res://scenes/Noc.png" id="2_qjtgk"]
[ext_resource type="PackedScene" uid="uid://btbiraaurb2bt" path="res://scenes/melee.tscn" id="3_8ugsl"]
[ext_resource type="AudioStream" uid="uid://ooe5mr1lixat" path="res://assets/Sounds/Melee_Walk.ogg" id="4_ax0hl"]
[ext_resource type="AudioStream" uid="uid://d1b61fx6nhyq0" path="res://assets/Sounds/Melee_Shakeout.ogg" id="5_bktqg"]
[ext_resource type="AudioStream" uid="uid://bbf746bu54jmx" path="res://assets/Sounds/Melee_Attack.ogg" id="6_1va44"]
[ext_resource type="AudioStream" uid="uid://crn1xt1depwlg" path="res://assets/Sounds/Melee_Hurt.ogg" id="7_ajymj"]
[ext_resource type="AudioStream" uid="uid://bm7rqu1x51ipw" path="res://assets/Sounds/Ranged_Hurt.ogg" id="8_8iu41"]
[ext_resource type="AudioStream" uid="uid://bs0vc38coyt0v" path="res://assets/Sounds/Ranged_Idle.ogg" id="9_xjm2d"]
[ext_resource type="AudioStream" uid="uid://bxvupj4cqasdo" path="res://assets/Sounds/Uncommon_Melee.ogg" id="10_c5wsw"]
[ext_resource type="AudioStream" uid="uid://dw0b4ajypigoa" path="res://assets/Sounds/Uncommon_Idle.ogg" id="11_kiwd2"]
[ext_resource type="AudioStream" uid="uid://b2nng3rknol5u" path="res://assets/Sounds/Uncommon_Hurt.ogg" id="12_eyq7x"]

[sub_resource type="Animation" id="Animation_ca1a2"]
resource_name = "Dying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("..:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.56905]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fyntp"]
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2, 0, 2, 0, 1, 0, 2, 1, 3, 4, 5, 0, 6, 0, 7, 0, 8, 9]
}

[sub_resource type="Animation" id="Animation_6nj7g"]
length = 1.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Melee")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable_attacking"
}, {
"args": [],
"method": &"disable_attacking"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.26667, 1.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"toggle_attacking"
}, {
"args": [],
"method": &"toggle_dashing"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackTimer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [-1],
"method": &"start"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 35, 36, 37, 38, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_0uemp"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_xnlaj"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_4rcal"]
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggle_shaking"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_kywi2"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 6, 10, 11]
}

[sub_resource type="Animation" id="Animation_h1lrr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ge6hu"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 22, 23, 26, 21, 27]
}

[sub_resource type="Animation" id="Animation_086dr"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [44, 46, 47, 46, 44]
}

[sub_resource type="Animation" id="Animation_3mc3e"]
length = 1.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"shoot"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [-1],
"method": &"start"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 61, 69]
}

[sub_resource type="Animation" id="Animation_h1g5f"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 49]
}

[sub_resource type="Animation" id="Animation_mgf1r"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [48, 70, 71, 72, 48]
}

[sub_resource type="Animation" id="Animation_hnrsm"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [51, 52, 53, 54, 55, 56, 57, 58]
}

[sub_resource type="Animation" id="Animation_gfraf"]
length = 3.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [73, 74, 75, 76, 77, 77, 78, 75, 79, 73, 80, 81, 82, 83, 83, 84, 85, 79, 73, 86, 87, 88, 89, 90, 91, 91, 92, 89, 93, 87, 94, 95, 96, 95]
}

[sub_resource type="Animation" id="Animation_5ep56"]
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.633333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"shoot"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [-1],
"method": &"start"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Uncommon_Melee")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129]
}

[sub_resource type="Animation" id="Animation_1w80y"]
length = 4.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MeleeUNCOMMON")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 3.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable_attacking"
}, {
"args": [],
"method": &"disable_attacking"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [-1],
"method": &"start"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.466667, 1.23333, 2.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"toggle_dashing"
}, {
"args": [],
"method": &"toggle_dashing"
}, {
"args": [],
"method": &"toggle_attacking"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Uncommon_Melee")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.833333, 1.43333, 1.73333, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 145, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169]
}

[sub_resource type="Animation" id="Animation_76gvl"]
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]
}

[sub_resource type="Animation" id="Animation_cq228"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 130, 131, 132, 133, 134, 135, 136, 137, 138, 134, 132, 132, 131, 130, 100]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4p55"]
_data = {
"Dying": SubResource("Animation_ca1a2"),
"Melee_Idle": SubResource("Animation_fyntp"),
"Melee_Possesed_Attack": SubResource("Animation_6nj7g"),
"Melee_Possesed_Idle": SubResource("Animation_0uemp"),
"Melee_Possesed_Move": SubResource("Animation_xnlaj"),
"Melee_Possesed_ShakeOut": SubResource("Animation_4rcal"),
"Melee_Startle": SubResource("Animation_kywi2"),
"RESET": SubResource("Animation_h1lrr"),
"Random": SubResource("Animation_ge6hu"),
"Ranged_Idle": SubResource("Animation_086dr"),
"Ranged_Possesed_Attack": SubResource("Animation_3mc3e"),
"Ranged_Possesed_Idle": SubResource("Animation_h1g5f"),
"Ranged_Possesed_ShakeOut": SubResource("Animation_mgf1r"),
"Ranged_Possesed_Walk": SubResource("Animation_hnrsm"),
"Uncommon_Idle": SubResource("Animation_gfraf"),
"Uncommon_Possesed_Attack": SubResource("Animation_5ep56"),
"Uncommon_Possesed_Attack_Melee": SubResource("Animation_1w80y"),
"Uncommon_Possesed_Idle": SubResource("Animation_76gvl"),
"Uncommon_Possesed_ShakeOut": SubResource("Animation_cq228")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wc0f6"]
size = Vector2(10, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqscj"]
size = Vector2(22, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_o1a8x"]
radius = 5.0

[node name="NOC" type="CharacterBody2D"]
z_index = 2
scale = Vector2(2, 2)
collision_layer = 20
collision_mask = 20
script = ExtResource("1_fpl0a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_j4p55")
}
autoplay = "Melee_Idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -22)
texture = ExtResource("2_qjtgk")
flip_h = true
hframes = 14
vframes = 13
frame = 100
metadata/_aseprite_wizard_config_ = {
"i_mode": 0,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/MetroidFuseAssets/Noc.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "2ba963571a1d8891283c7e08eecfd818"

[node name="NocCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_wc0f6")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosessTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Melee" parent="." instance=ExtResource("3_8ugsl")]
position = Vector2(-0.5, 0)
scale = Vector2(1.32, 1.44674)
monitoring = false
monitorable = false

[node name="MeleeUNCOMMON" parent="." instance=ExtResource("3_8ugsl")]
position = Vector2(2.5, -5)
scale = Vector2(2.68, 1.80674)
monitoring = false
monitorable = false

[node name="NocArea" type="Area2D" parent="."]
position = Vector2(1, 1)
collision_layer = 6
collision_mask = 6
monitoring = false
monitorable = false

[node name="NocAreaCollisionShape" type="CollisionShape2D" parent="NocArea"]
position = Vector2(-1, -19)
shape = SubResource("RectangleShape2D_qqscj")

[node name="Grab" type="Area2D" parent="."]
position = Vector2(0.5, -25)
collision_layer = 8
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grab"]
shape = SubResource("CircleShape2D_o1a8x")

[node name="ProjectileNode" type="Node2D" parent="."]
position = Vector2(0, -25)

[node name="UncommonProjectileNode" type="Node2D" parent="."]
position = Vector2(16, -21.5)

[node name="Melee_Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ax0hl")
max_distance = 500.0
bus = &"Sfx"

[node name="Melee_Shakeout" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bktqg")
volume_db = 10.5
max_distance = 500.0
bus = &"Sfx"

[node name="Melee_Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1va44")
volume_db = 10.005
max_distance = 500.0
bus = &"Sfx"

[node name="Melee_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ajymj")
volume_db = 10.02
max_distance = 500.0
bus = &"Sfx"

[node name="Ranged_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8iu41")
volume_db = 9.02
max_distance = 500.0
bus = &"Sfx"

[node name="Ranged_Idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_xjm2d")
volume_db = 10.02
max_distance = 500.0
bus = &"Sfx"

[node name="Uncommon_Melee" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_c5wsw")
volume_db = 10.02
max_distance = 500.0
bus = &"Sfx"

[node name="Uncommon_Idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_kiwd2")
volume_db = 10.02
max_distance = 500.0
bus = &"Sfx"

[node name="Uncommon_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_eyq7x")
volume_db = 10.02
max_distance = 500.0
bus = &"Sfx"

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PosessTimer" to="." method="_on_posess_timer_timeout"]
[connection signal="body_entered" from="NocArea" to="." method="_on_noc_area_body_entered"]
